fixed essay saving and white space

--- a/app/static/scss/essays.scss
+++ b/app/static/scss/essays.scss
@@ -87,6 +87,7 @@ ul.essay-container {
             .content {
                 position: relative;
                 line-height: 24px;
+                white-space: pre-wrap;
 
                 .essay-title {
                     text-align: center;
